plugins {
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'java-library'
}

mrjar {
    moduleName = 'todo.modules.demo.todo.domain' 
    jpmsOpts = [
        '--patch-module',
        'spring.data.relational=D:/development/cygwin/home/williamcboyd/.gradle/caches/modules-2/files-2.1/org.springframework.data/spring-data-jdbc/2.0.4.RELEASE/734cf610a37d6e64a35d3a595dac664fc300e162/spring-data-jdbc-2.0.4.RELEASE.jar'
    ]
    excludes = ['spring-data-jdbc']
}

group 'works.hop'
version '0.0.1-SNAPSHOT'
sourceCompatibility = '13'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    compile 'org.springframework.boot:spring-boot-starter-data-jdbc'
    runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.16'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}

bootJar{
    enabled = false
}

jar {
    enabled = true
}

tasks.withType( JavaCompile ){
    options.compilerArgs += ['-Xlint:unchecked', '--enable-preview']
}